--- a/edit_profile.html
+++ b/edit_profile.html
@@ -16,21 +16,22 @@
 <body>
 <div class="container">
     <div class="row">
-        <form class="form-horizontal">
+        <form class="form-center-prof">
             <fieldset>
                 <h2>Ваш профиль</h2>
 
-                <!-- first-name input-->
+                <!-- имя-->
                 <div class="control-group">
                     <label class="control-label">Имя</label>
 
                     <div class="controls">
                         <input id="first-name" name="first-name" type="text" placeholder="имя" class="input-xlarge">
+
                         <p class="help-block"></p>
                     </div>
                 </div>
 
-                <!-- last-name input-->
+                <!--фамилия-->
                 <div class="control-group">
                     <label class="control-label">Фамилия</label>
 
@@ -40,17 +41,18 @@
                     </div>
                 </div>
 
-                <!--date-->
+                <!--дата-->
                 <div class="control-group">
                     <label class="control-label">Дата рождения</label>
 
                     <div class="controls">
                         <input id="input-date" type="date" value="dd-MM-yyyy" class="input-xlarge">
+
                         <p class="help-block"></p>
-                        </div>
+                    </div>
                 </div>
 
-                <!-- Select Basic -->
+                <!-- пол -->
                 <div class="control-group">
                     <label class="control-label" for="selectbasic">Пол</label>
 
@@ -63,7 +65,7 @@
                     </div>
                 </div>
 
-                <!-- intolerance select -->
+                <!-- переносимость -->
                 <div class="control-group">
                     <label class="control-label">Переносимость</label>
 
@@ -79,12 +81,12 @@
                         </select>
                     </div>
                 </div>
-                <!-- Button -->
+                <!-- отправить -->
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="singlebutton"></label>
 
-                    <div class="col-md-4">
-                        <button id="singlebutton" name="singlebutton" class="btn btn-primary">submit</button>
+                    <div class="col-md-12">
+                        <button id="singlebutton" name="singlebutton" class="btn btn-primary input-xlarge">submit</button>
                     </div>
                 </div>
             </fieldset>
