--- a/singin.html
+++ b/singin.html
@@ -12,7 +12,7 @@
   </head>
 <body>
     <div class="container">
-      <form class="form-signin">
+      <form class="form-center">
         <h2 class="form-signin-heading">Авторизация</h2>
         <label for="inputEmail" class="sr-only">Email</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="">
