--- a/edit_profile.html
+++ b/edit_profile.html
@@ -52,6 +52,17 @@
                     </div>
                 </div>
 
+                <!--вес-->
+                <div class="control-group">
+                    <label class="control-label">Вес</label>
+
+                    <div class="controls">
+                        <input id="number" type="number" class="input-xlarge" placeholder="вес">
+
+                        <p class="help-block"></p>
+                    </div>
+                </div>
+
                 <!-- пол -->
                 <div class="control-group">
                     <label class="control-label" for="selectbasic">Пол</label>
@@ -62,6 +73,7 @@
                             <option>Мужчина</option>
                             <option>Женщина</option>
                         </select>
+                        <p class="help-block"></p>
                     </div>
                 </div>
 
@@ -79,8 +91,21 @@
                             <option value="2">2</option>
                             <option value="3">3</option>
                         </select>
+                        <p class="help-block"></p>
                     </div>
                 </div>
+
+                <!-- переносимость -->
+                <div class="control-group">
+                    <label class="control-label">Переносимость лимит</label>
+
+                    <div class="controls">
+                        <input id="weight" type="number" class="input-xlarge" placeholder="лимит в граммах">
+
+                        <p class="help-block"></p>
+                    </div>
+                </div>
+
                 <!-- отправить -->
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="singlebutton"></label>
