--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" ng-app>
+<html lang="ru" ng-app="webApp">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,10 +11,18 @@
 </head>
 <body>
 
+    <ng-view>
+    </ng-view>
+
+
+
 <!--base js-->
-<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/angular/angular.min.js"></script>
+<script src="js/angular/rangular-route.js"></script>
+<script src="js/angular/controllers.js"></script>
+
 <!--plugins-->
 
 </body>
