--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 
 
 <!--base js-->
-<script src="js/jquery-2.1.4.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/angular/angular.min.js"></script>
-<script src="js/angular/rangular-route.js"></script>
-<script src="js/angular/controllers.js"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/angular/angular.min.js"></script>
+    <script src="js/angular/rangular-route.js"></script>
+    <script src="js/angular/controllers.js"></script>
+    <script src="js/angular/Auth.js"></script>
 
 <!--plugins-->
 
