--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-
     <ng-view>
     </ng-view>
-
-
 <!--base js-->
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/angular/angular.min.js"></script>
 <script src="js/angular/rangular-route.js"></script>
 <script src="js/angular/controllers.js"></script>
+<script src="js/angular/Auth.js"></script>
 
 <!--plugins-->
 
