--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/angular/angular.min.js"></script>
 <script src="js/angular/rangular-route.js"></script>
-<script src="js/angular/controllers.js"></script>
-<script src="js/angular/Auth.js"></script>
+<!--<script src="js/angular/controllers.js"></script>-->
+    <script src="js/app/app.js"></script>
+    <script src="js/app/data.js"></script>
+    <script src="js/app/directives.js"></script>
+    <script src="js/app/authCtrl.js"></script>
 
 <!--plugins-->
 
