--- a/index.html
+++ b/index.html
@@ -4,24 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title></title>
     <!-- Bootstrap -->
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <ng-view>
-    </ng-view>
-<!--base js-->
+<ng-view>
+</ng-view>
+<!--Bootstrap-->
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<!--Angularjs-->
 <script src="js/angular/angular.min.js"></script>
-<script src="js/angular/rangular-route.js"></script>
-<!--<script src="js/angular/controllers.js"></script>-->
-    <script src="js/app/app.js"></script>
-    <script src="js/app/data.js"></script>
-    <script src="js/app/directives.js"></script>
-    <script src="js/app/authCtrl.js"></script>
+<script src="js/angular/angular-route.min.js"></script>
+<script src="js/angular/angular-animate.min.js"></script>
+<!--APP-->
+<script src="js/app/controllers.js"></script>
 
 <!--plugins-->
 
