--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <script src="js/angular/angular-animate.min.js"></script>
 <!--APP-->
 <script src="js/app/controllers.js"></script>
-
 <!--plugins-->
+<script src="js/toaster.js"></script>
+
 </body>
 </html>
