--- a/1.html
+++ b/1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" ng-app="webApp">
+<html lang="ru" ng-app="app">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,6 +24,8 @@
 <script src="js/app/controllers.js"></script>
 <!--plugins-->
 <script src="js/toaster.js"></script>
+<script src="js/app/data.js"></script>
+<script src="js/app/directives.js"></script>
 
 </body>
 </html>
